--- a/misc/pomodoro.org
+++ b/misc/pomodoro.org
@@ -2,41 +2,53 @@
 
 Schedule
 
-* 10:11:31 - 10:31
-Pomodoro 1 (Create Pomodoro List)
+* 9:30 -  9:45  #1
+* 9:53 -  10:08 #2
+* 10:10 - 10:25 #3
+* 10:25 - 10:45 (Long Break)
+* 10:45 - 11:00 #4
+* 11:05 - 11:20 #5
+* 11:25 - 11:40 #6
+* 11:40 - 12:00 (Long Break)
+* 12:00 - 12:15 #7
+* 12:20 - 12:35 #8
+* 12:40 - 12:55 #9
 
-* 10:38:05 - 10:55
-Pomodoro 2
 
-* 10:55 - 11:10
-Long Break
-
-* 11:15-11:35
-Pomodoro 3
-
-==
-
-Tasks
-* TODO Email James abut visit (0.5)
+* TODO Reply to James abut visit (0.5)
 * TODO Comment on ITHIM survey (0.5)
 * TODO Update Methods Pomodoro List (0.5)
 See [[https://cobenefitsithim.slack.com/files/syounkin/F2WEBBFBN/Methods_Paper_To-Do_List][Methods Paper To-Do List]].
 * DONE Employment Status Change (0.5)
 Read up on the change that is happening 12/1.
+* TODO Email Karen Aune
 * DONE Email Jonathan about FLSA Change (0.5)
 * TODO Clean UW inbox (0.5)
 * TODO Get in touch with Yizheng & Liming (0.5)
 * TODO Cambridge Trip Deliverables (1)
 * TODO Email Jonthan previous appointment letter
-==
+* TODO Cambridge visit arrangements (2)
+* TODO MI and WI vs. CA and NY analysis
+* TODO Six month plan
 
-Pomodoros (Mon Nov 28)
+Pomodoros
 * Create Pomodoro List [X]
-* Employment Status Change/Email Jonathan about Appointment [X]
-* Email James & Deliverables [ ]
+* Create deliverables document [ ] [ ]
+* Email Jonathan previous appointment letter & Email Karen Aune [ ]
+* Misc [ ] 
+** Clean UW Inbox
+** Get in touch with Y & L
+** Email Jonathan/Monet about Cambridge trip arrangements
+* Update methods paper To-Do List [ ]
+* Edit methods paper [7] 
+** Materials & Methods [ ] [ ]
+** Introduction & Abstract [ ]
+** Results [ ] [ ]
+** Conclusions [ ] [ ]
+* Create a six-month plan for work at GHI [ ]
+* MI and WI vs. CA and NY analysis
+* Reply to James abut visit
 
-
-Deliverables
 * ITHIM Suite of R Packages
 Four working and documented R packages on GitHub
 ** ITHIM
