--- a/misc/pomodoro.org
+++ b/misc/pomodoro.org
@@ -1,38 +1,62 @@
 
 * Schedule
-15 min pomodoros, 5 min short break, 20 min long break
-** 9:17 -  9:32  #1
-** 9:37 -  9:52  #2
-** 10:06 - 10:21 #3
-** 10:21 - 10:35 (Long Break)
-** 10:45 - 11:00 #4
-** 11:05 - 11:20 #5
+15 min pomodoros, 5 min short break, 20 min long break every 3
+pomodors
+** Pomodoro #1
+Mon Dec  5 10:42:08 2016
+** Pomodoro #2
+Mon Dec  5 11:01:37 2016
+** Pomodoro #3
+Mon Dec  5 11:22:45 2016
+** Pomodoro #4
+Mon Dec  5 11:59:42 2016
+** Pomodoro #5
+Mon Dec  5 12:22:45 2016
 
-Pomodoros
 * Create Pomodoro List & Misc Personal [X]
-** DONE Reschedule haircut
-* Admin [X] [X]
-** DONE Email Jonathan previous appointment letter
-** DONE Reply to James abut visit
-** DONE Reply to Jonathan about OH, MI analysis
-* Admin 2 [X]
-** DONE Email Jonathan/Monet about Cambridge trip arrangements
-** DONE Email Karen Aune
-** DONE Email Jason about burden values
-** DONE Put ITHIM (GHI) meetings on calendar
-** DONE Slack about scheduling ITHIM (All-Team) meeting
-* Misc [X]
-** DONE Clean UW Inbox
-** DONE Update calendar
+
+* Cambridge Trip Details [X] [X] [X] [ ] 
+** TODO Email Woodcock
+** Outline
+*** TODO Confirm dates with Julie
+Julie
+~~~~~
+Tuesday, 1/24 - 1/25 Madison -> Geneva
+Wednesday, 1/25 - 1/28 Geneva
+Friday, 1/27 Geneva -> Amsterdam
+Friday, 1/27 Amsterdam -> Wijk aan Zee
+Friday - Sunday, 1/27 - 1/29 Wijk Aan Zee
+Sunday, 1/29 Wijk Aan Zee -> England
+Monday - Tuesday, 1/30 - 1/31 Oxford
+Tuesday, 1/31 - Wednesday, 2/1 Oxford -> Madison
+
+Sam
+~~~
+Thursday, 1/26 - 1/27 Madison -> Amsterdam
+Friday, 1/27 Amsterdam -> Wijk aan Zee
+Friday - Sunday, 1/27 - 1/29 Wijk Aan Zee
+Sunday, 1/29 Wijk Aan Zee -> England
+Monday, 1/30 - Thursday, 2/9 Cambridge
+Friday, 2/10 Cambridge -> Madison
+
+Kids
+~~~~
+Thursday, 1/25 - 2/2 (Steve & Linda)
+Wednesday, 2/2 - 2/10 (Julie only)
+
+* Misc. [ ]
+** TODO Merge Vargo's edits
+** TODO Inspect statewise GBD values from Vargo
+
+** TODO Doodle poll for Holiday party
+* MI and WI vs. CA and NY analysis [ ]
+*** TODO Create new figure
+
+* Create deliverables document [ ] [ ]
 
 * Update methods paper To-Do List [ ]
-* Create deliverables document [ ] [ ]
-* ITHIM Meeting [ ]
-** TODO Put on calendar
-** TODO Add agenda items
-* MI and WI vs. CA and NY analysis [ ] [ ]
-** Create new figure
-* Edit methods paper [7] 
+
+* Edit methods paper [ ] x 8 
 ** Materials & Methods [ ] [ ]
 ** Introduction & Abstract [ ]
 ** Results [ ] [ ]
@@ -49,3 +73,32 @@ Active transportation comparative risk assessment
 Road injuries/fatalities
 ** AirQ
 Air quality assessment
+
+* ITHIM Meeting [ ]
+** DONE Put on calendar
+** TODO Add agenda items
+
+
+
+
+
+
+
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~ Archive ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Admin [X] [X]
+** DONE Email Jonathan previous appointment letter
+** DONE Reply to James abut visit
+** DONE Reply to Jonathan about OH, MI analysis
+* Admin 2 [X]
+** DONE Email Jonathan/Monet about Cambridge trip arrangements
+** DONE Email Karen Aune
+** DONE Email Jason about burden values
+** DONE Put ITHIM (GHI) meetings on calendar
+** DONE Slack about scheduling ITHIM (All-Team) meeting
+* Misc [X]
+** DONE Clean UW Inbox
+** DONE Update calendar
